zerocopy-derive/tests/ui-stable/privacy.stderr
error: type `private::_::_::_::ẕb` is private
  --> tests/ui-stable/privacy.rs:80:65
   |
80 |     let _: <StructWithNamedFields as zerocopy_renamed::HasField<_, _, { zerocopy_renamed::ident_id!(b) }>>::Type =
   |                                                                 ^ private type

error: type `private::_::_::_::ẕ1` is private
  --> tests/ui-stable/privacy.rs:87:64
   |
87 |     let _: <StructWithAnonFields as zerocopy_renamed::HasField<_, _, { zerocopy_renamed::ident_id!(1) }>>::Type =
   |                                                                ^ private type

error: type `private::_::_::_::ẕb` is private
  --> tests/ui-stable/privacy.rs:93:49
   |
93 |     let _: <Union as zerocopy_renamed::HasField<_, _, { zerocopy_renamed::ident_id!(b) }>>::Type = 0u16;
   |                                                 ^ private type
